Created project for AndroidStudio 3.5 since for some reason I could not open the one created on version 4 with 3.5

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.azure.data.android.benchmarkdesugaring"
+        applicationId "com.azure.data.android.benchmark"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
