--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.azure.data.android.benchmarkdesugaring">
+    package="com.azure.data.android.benchmark">
 
     <application
         android:allowBackup="true"
